[package]
name = "urlex"
version = "0.1.1"
authors = ["Wang Ruochen <wangkevin920@163.com>"]
edition = "2018"
description = "Extract URL from stdin and print them to stdout"
readme = "README.md"
license = "MIT"
repository = "https://github.com/weirane/urlex"
categories = ["command-line-utilities"]
exclude = ["/scripts/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
anyhow = "1.0"
