[package]
name = "urlex"
version = "0.1.1"
authors = ["Wang Ruochen <wangkevin920@163.com>"]
edition = "2018"
description = "Extract URL from stdin and print them to stdout"
readme = "README.md"
license = "MIT"
repository = "https://github.com/weirane/urlex"
categories = ["command-line-utilities"]
exclude = ["/scripts/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli"]
cli = ["anyhow", "structopt"]

[profile.release]
panic = "abort"

[dependencies]
regex = "1.3"
anyhow = { version = "1.0", optional = true }
structopt = { version = "0.3", optional = true }
